src/objects/MICO_Meeting__c.object
<CustomObject>
    <description>Business Description: Used to record meetings, including: minutes, attendees, outputs and links to risks and issues, decisions and questions.

Used In: Mission Control App</description>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <defaultValue>$User.FirstName &amp; &quot; &quot; &amp;  $User.LastName &amp;&quot;, &quot;</defaultValue>
        <description>People who attended the meeting.</description>
        <inlineHelpText>The people who attended this meeting in person or by phone. 

NB: Ensure you use same &quot;Firstname Lastname&quot; as listed in Tracker for all attendees to ensure this meeting appears in their list view &quot;Meetings I attended&quot;</inlineHelpText>
        <label>Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Key_Output__c</fullName>
        <label>Key Output</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Attendance__c</fullName>
        <label>Non Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Summary__c</fullName>
        <description>Summary of the outcome of the meeting</description>
        <label>Outcome Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>MICO_Project_Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>MICO_Sprint__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>MICO_Sprint_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Requirements Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint Retrospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Purpose__c</columns>
        <columns>Type__c</columns>
        <columns>Start__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Meetings</label>
    </listViews>
    <listViews>
        <fullName>Analytics_Insights_Meetings</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Purpose__c</columns>
        <columns>Type__c</columns>
        <columns>Start__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Analytics</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Insights</value>
        </filters>
        <label>Analytics / Insights Meetings</label>
    </listViews>
    <listViews>
        <fullName>Event_Medical_Meetings</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Purpose__c</columns>
        <columns>Type__c</columns>
        <columns>Start__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Event</value>
        </filters>
        <label>Event / Medical Meetings</label>
    </listViews>
    <listViews>
        <fullName>Market_Access_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Purpose__c</columns>
        <columns>Type__c</columns>
        <columns>Start__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Market Access</value>
        </filters>
        <label>Market Access Meetings</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Multichannel_Meetings</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Purpose__c</columns>
        <columns>Type__c</columns>
        <columns>Start__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Marketing</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Multichannel</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Campaign</value>
        </filters>
        <label>Marketing / Multichannel Meetings</label>
    </listViews>
    <listViews>
        <fullName>SFA_Meetings</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Purpose__c</columns>
        <columns>Type__c</columns>
        <columns>Start__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SFA</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Segmentation</value>
        </filters>
        <label>SFA Meetings</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>